# lecpa-agent

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.nas.yml  pnpm-lock.yaml  pyproject.toml
.claude/: settings.local.json
apps/api/: Dockerfile  __init__.py  config.py  main.py  pyproject.toml
apps/api/database/: __init__.py  models.py  session.py
apps/api/database/migrations/: env.py
apps/api/database/migrations/versions/: 001_initial_schema.py  002_rename_s3_key_to_storage_key.py  003_m2_nas_sync_schema.py
apps/api/routers/: __init__.py  admin.py  artifacts.py  auth.py  cases.py  chat.py  clients.py  documents.py  ingest.py  search.py
apps/api/services/: embedding_provider.py  model_router.py  search.py  storage.py  template_context.py  template_renderer.py
apps/api/services/agents/: __init__.py  extraction_agent.py  intake_agent.py  notice_agent.py  orchestrator.py  qc_agent.py
apps/api/services/storage/: __init__.py  base.py  filesystem.py
apps/web/: .env.example  Dockerfile  next.config.js  package.json  tailwind.config.js
apps/web/app/: globals.css  layout.tsx  providers.tsx
apps/web/app/(dashboard)/: layout.tsx  page.tsx
apps/web/app/(dashboard)/admin/sync/: page.tsx
apps/web/app/(dashboard)/cases/: page.tsx
apps/web/app/(dashboard)/cases/[id]/: page.tsx
apps/web/app/(dashboard)/chat/: page.tsx
apps/web/app/api/auth/[...nextauth]/: route.ts
apps/web/app/login/: page.tsx
apps/web/components/artifacts/: artifact-viewer.tsx
apps/web/components/cases/: artifact-list.tsx  document-list.tsx  index.ts
apps/web/components/chat/: chat-container.tsx  chat-input.tsx  chat-message.tsx  index.ts
apps/web/components/documents/: document-viewer.tsx  index.ts
apps/web/components/ui/: badge.tsx  button.tsx  card.tsx  error-boundary.tsx  index.ts  input.tsx  sidebar.tsx  skeleton.tsx  theme-toggle.tsx  toast.tsx
apps/web/lib/hooks/: use-focus-trap.ts
config/: embeddings.yaml  folder_rules.yaml  model_router.yaml  ocr.yaml
config/templates/: extraction_summary.jinja2  metadata.yaml  missing_docs_email.jinja2  notice_response.jinja2  organizer_checklist.jinja2  qc_memo.jinja2
docs/: implementation-spec.md
infra/: docker-compose.override.yml  docker-compose.yml  init-db.sql
services/mcp-case-server/: pyproject.toml  server.py
services/mcp-kb-server/: pyproject.toml  server.py
services/nas-sync-agent/: Dockerfile  config.yaml.example  pyproject.toml
services/nas-sync-agent/nas_sync/: __init__.py  api_client.py  config.py  digest.py  lnk_parser.py  main.py  models.py  parser.py  scanner.py  watcher.py
services/nas-sync-agent/tests/: __init__.py  test_lnk_parser.py  test_parser.py
services/taxdome-sync-agent/: pyproject.toml
services/worker/: Dockerfile  __init__.py  main.py  pyproject.toml
services/worker/tasks/: __init__.py  canonicalize.py  canonicalize_utils.py  embed.py  extract.py  field_extraction.py  ingest.py  ocr.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_1099_pipeline.py  test_k1_pipeline.py  test_notice_ocr.py  test_w2_pipeline.py
tests/golden/: README.md
tests/unit/: test_canonicalize.py  test_extraction_agent.py  test_notice_agent.py  test_qc_agent.py  test_redaction.py
