[project]
name = "mcp-case-server"
version = "0.1.0"
description = "MCP server for case management operations"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "sqlalchemy>=2.0.25",
    "psycopg2-binary>=2.9.9",
    "structlog>=24.1.0",
    "orjson>=3.9.0",
    "shared",
]

[tool.uv.sources]
shared = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
