[project]
name = "taxdome-sync-agent"
version = "0.1.0"
description = "Windows service to sync TaxDome Drive to S3/MinIO"
requires-python = ">=3.11"
dependencies = [
    "watchdog>=3.0.0",
    "boto3>=1.34.0",
    "httpx>=0.26.0",
    "tenacity>=8.2.0",
    "structlog>=24.1.0",
    "pyyaml>=6.0",
    "orjson>=3.9.0",
    "shared",
]

[tool.uv.sources]
shared = { workspace = true }

[project.optional-dependencies]
windows = [
    "pywin32>=306",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
